PolarPatterns into Patterns

--- a/reimagined lampu/reimagined lampu.csproj
+++ b/reimagined lampu/reimagined lampu.csproj
@@ -38,8 +38,10 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Maths.cs" />
+    <Compile Include="Patterns.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
