--- a/reimagined lampu/reimagined lampu.csproj
+++ b/reimagined lampu/reimagined lampu.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="GameStuff.cs" />
     <Compile Include="Maths.cs" />
     <Compile Include="Patterns.cs" />
     <Compile Include="Player.cs" />
