Added MainMenu & Buttons

--- a/reimagined lampu/reimagined lampu.csproj
+++ b/reimagined lampu/reimagined lampu.csproj
@@ -39,10 +39,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Bullet.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameStuff.cs" />
     <Compile Include="IGameState.cs" />
+    <Compile Include="MainMenu.cs" />
     <Compile Include="Maths.cs" />
     <Compile Include="Patterns.cs" />
     <Compile Include="Player.cs" />
