--- a/reimagined lampu/reimagined lampu.csproj
+++ b/reimagined lampu/reimagined lampu.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Bullet.cs" />
     <Compile Include="Button.cs" />
+    <Compile Include="Death.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameStuff.cs" />
@@ -47,6 +48,7 @@
     <Compile Include="MainMenu.cs" />
     <Compile Include="Maths.cs" />
     <Compile Include="Patterns.cs" />
+    <Compile Include="Pause.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="PlayState.cs" />
     <Compile Include="Program.cs" />
