--- a/reimagined lampu/reimagined lampu.csproj
+++ b/reimagined lampu/reimagined lampu.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Bullet.cs" />
     <Compile Include="Button.cs" />
+    <Compile Include="Circle.cs" />
     <Compile Include="Death.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
